Correção na responsividade da navbar e atualização no portifolio

--- a/flatagaServicos/index.html
+++ b/flatagaServicos/index.html
@@ -7,13 +7,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../flatagaServicos/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <link rel="icon" href="../flatagaServicos/img/icon.png" type="image/png">
 </head>
 <body>
 
     <header class="header" id="header">
         <nav class="nav">
             <div class="nav-logo">
-                <i class="fas fa-hard-hat"></i>
+                <img src="../flatagaServicos/img/logo.png" alt="Imagem da logo da empresa flataga" class="nav-logo-img">
                 <span>Flataga Serviços</span>
             </div>
             <ul class="nav-menu" id="nav-menu">
@@ -147,58 +148,58 @@
             </div>
             <div class="portfolio-filters">
                 <button class="filter-btn active" data-filter="all">Todos</button>
-                <button class="filter-btn" data-filter="construction">Construção</button>
+                <button class="filter-btn" data-filter="construction">Construção/Pintura</button>
                 <button class="filter-btn" data-filter="renovation">Reforma</button>
-                <button class="filter-btn" data-filter="landscaping">Elétrica/Hidráulica</button>
+                <button class="filter-btn" data-filter="landscaping">Instalações</button>
             </div>
             <div class="portfolio-grid">
                 <div class="portfolio-item" data-category="construction">
-                    <img src="../flatagaServicos/img/impermeabilizacao.png" alt="Casa Moderna">
+                    <img src="../flatagaServicos/img/impermeabilizacao.png" alt="Telha impermeabilizada">
                     <div class="portfolio-overlay">
                         <h4>Condomínio - Impermeabilização de laje</h4>
-                        <p>Construção</p>
+                        <p>Construção/Pintura</p>
                     </div>
                 </div>
                 <div class="portfolio-item" data-category="renovation">
-                    <img src="../flatagaServicos/img/teste.png" alt="Reforma de Cozinha">
+                    <img src="../flatagaServicos/img/parquinho.png" alt="Restauração de brinquedos de parquinho">
                     <div class="portfolio-overlay">
-                        <h4>Lorem, ipsum. - Lorem ipsum dolor sit amet.</h4>
+                        <h4>Condomínio - Restauração de brinquedos de parquinho</h4>
                         <p>Reforma</p>
                     </div>
                 </div>
                 <div class="portfolio-item" data-category="landscaping">
-                    <img src="../flatagaServicos/img/teste.png" alt="Jardim Residencial">
+                    <img src="../flatagaServicos/img/mural.png" alt="Iinstalação de mural ripado e arandelas em condomínio">
                     <div class="portfolio-overlay">
-                        <h4>Lorem, ipsum. - Lorem ipsum dolor sit amet.</h4>
-                        <p>Elétrica/Hidráulica</p>
+                        <h4>Condomínio - Instalação de mural ripado e arandelas</h4>
+                        <p>Instalações</p>
                     </div>
                 </div>
                 <div class="portfolio-item" data-category="construction">
-                    <img src="../flatagaServicos/img/teste.png" alt="Edifício Comercial">
+                    <img src="../flatagaServicos/img/muro.png" alt="Edifício Comercial">
                     <div class="portfolio-overlay">
-                        <h4>Lorem, ipsum. - Lorem ipsum dolor sit amet.</h4>
-                        <p>Construção</p>
+                        <h4>Residência - Remoção de textura e pintura de muro</h4>
+                        <p>Construção/Pintura</p>
                     </div>
                 </div>
                 <div class="portfolio-item" data-category="renovation">
-                    <img src="../flatagaServicos/img/teste.png" alt="Reforma de Banheiro">
+                    <img src="../flatagaServicos/img/janela.png" alt="Reforma de Banheiro">
                     <div class="portfolio-overlay">
-                        <h4>Lorem, ipsum. - Lorem ipsum dolor sit amet.</h4>
+                        <h4>Residência - Restauração de janela</h4>
                         <p>Reforma</p>
                     </div>
                 </div>
                 <div class="portfolio-item" data-category="landscaping">
-                    <img src="../flatagaServicos/img/teste.png" alt="Paisagismo Comercial">
+                    <img src="../flatagaServicos/img/cano.png" alt="Paisagismo Comercial">
                     <div class="portfolio-overlay">
-                        <h4>Lorem, ipsum. - Lorem ipsum dolor sit amet.</h4>
-                        <p>Elétrica/Hidráulica</p>
+                        <h4>Residência - Conserto de instalação hidráulica </h4>
+                        <p>Instalações</p>
                     </div>
                 </div>
-                <div class="portfolio-item" data-category="construction">
+                <!-- <div class="portfolio-item" data-category="construction">
                     <img src="../flatagaServicos/img/teste.png" alt="Residencial Sunset">
                     <div class="portfolio-overlay">
                         <h4>Lorem, ipsum. - Lorem ipsum dolor sit amet.</h4>
-                        <p>Construção</p>
+                        <p>Construção/Pintura</p>
                     </div>
                 </div>
                 <div class="portfolio-item" data-category="renovation">
@@ -212,9 +213,9 @@
                     <img src="../flatagaServicos/img/teste.png" alt="Paisagismo Corporativo">
                     <div class="portfolio-overlay">
                         <h4>Lorem, ipsum. - Lorem ipsum dolor sit amet.</h4>
-                        <p>Elétrica/Hidráulica</p>
+                        <p>Instalações</p>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
@@ -328,7 +329,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="footer-logo">
-                        <i class="fas fa-hard-hat"></i>
+                        <img src="../flatagaServicos/img/logoFooter.png" alt="Imagem da logo da empresa flataga" class="nav-logo-img">
                         <span>Flataga Serviços</span>
                     </div>
                     <p>Construindo sonhos e reformando histórias há anos.</p>
