--- a/flatagaServicos/index.html
+++ b/flatagaServicos/index.html
@@ -287,7 +287,7 @@
                         <div class="form-group">
                             <textarea id="message" name="message" placeholder="Sua mensagem" rows="5" required></textarea>
                         </div>
-                        <button type="submit" class="btn-primary">Enviar Mensagem</button>
+                        <a href="https://wa.me/5511944000434" class="btn-primary" target="_blank">Enviar Mensagem</a>
                     </form>
                 </div>
                 <div class="contact-info">
